Fix minor z-index bug when dragging active tabs
Previously would be hidden when being dragged to a new section due to
drag z-index having a lower priority to the .active z-index

--- a/client/resources/stylesheets/tabs/tab.less
+++ b/client/resources/stylesheets/tabs/tab.less
@@ -9,7 +9,8 @@
     background: @tabColor;
      .transition(padding-left ease 0.25s);
 
-    &.move {
+    &.move,
+    &.active.move {
         position: fixed;
         z-index: 100000;
         pointer-events:none;
@@ -49,7 +50,7 @@
             }
             &.state-sync {
                 color: #27ae60;
-            } 
+            }
         }
 
         .close {
@@ -86,7 +87,7 @@
         z-index: 10;
         border-color: @tabActiveBorder;
         background: @tabActiveColor;
-        
+
         .inner {
             .close {
                 color: rgba(0,0,0,0.5);
